# lazywait-homeassistant

./: LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/lazywait/: __init__.py  api.py  automations.py  binary_sensor.py  camera.py  camerai.py  camerasnapshot.py  config_flow.py  const.py  control.py  coordinator.py  hikvision.py  manifest.json  mediarelay.py  sensor.py  strings.json  telemetry.py  ws_client.py
custom_components/lazywait/translations/: ar.json
inference/: README.md  pyproject.toml  requirements.txt
inference/lazywait_inference/: __init__.py  __main__.py  actions.py  detector.py  engine.py  supervisor.py
inference/models/: README.md
tests/: conftest.py  test_admin_control.py  test_admin_inventory.py  test_admin_ws_push.py  test_api.py  test_camera_discovery.py  test_camera_native_webrtc.py  test_camera_snapshot.py  test_const.py  test_telemetry.py
